Homepage media queries completed

--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,18 @@ p {
   margin: 0 2% 20px;
 }
 
+@media (min-width: 320px) {
+  .container {
+    width: 310px;
+  }
+}
+
+@media (min-width: 480px) {
+  .container {
+    width: 470px;
+  }
+}
+
 @media (min-width: 760px) {
   .container {
     width: 750px;
