--- a/css/style.css
+++ b/css/style.css
@@ -444,6 +444,22 @@ header .hero img {
   font-weight: 100;
 }
 
+.left-nav .items ul li a:link {
+  color: #FFFFFF;
+}
+
+.left-nav .items ul li a:visited {
+  color: #FFFFFF;
+}
+
+.left-nav .items ul li a:hover {
+  background-color: #8C7DAF;
+}
+
+.left-nav .items ul li a:active {
+  color: #08CDDD;
+}
+
 .left-nav .items ul li a i {
   width:16px;
   text-align: center;
