--- a/css/dropit.css
+++ b/css/dropit.css
@@ -16,6 +16,14 @@
   display: inline-block;
 }
 
+.setmenu.dropit {
+  list-style: none;
+	padding: 0;
+	margin: 5px 0 0;
+  float: right;
+  display: inline-block;
+}
+
 .dropit .dropit-trigger { position: relative; }
 .dropit .dropit-submenu {
   position: absolute;
@@ -34,10 +42,10 @@
   right: 0; /* dropdown left or right */
   z-index: 1000;
   display: none;
-  min-width: 150px;
+  min-width: 168px;
   list-style: none;
-	padding: 13px;
-	margin: 20px 0 0;
+	padding: 9px;
+	margin: 13px 0 0;
 }
 
 .dropit .dropit-open .dropit-submenu {
@@ -76,15 +84,15 @@
 
 .dropit .dropit-open .dropit-submenu li {
  display: block;
- margin-bottom: 15px;
+ margin-bottom: 20px;
 }
 
 .setmenu.dropit .dropit-open .dropit-submenu li {
  display: block;
- margin-bottom:50px;
+ margin-bottom:80px;
  text-align:left;
  float: left;
- margin: 3px;
+ margin: 4px;
 }
 
 .dropit .dropit-open .dropit-submenu li:last-child {
@@ -92,7 +100,7 @@
 }
 
 .setmenu.dropit .dropit-open .dropit-submenu li:last-child {
- margin-bottom: 9px;
+ margin-bottom: 10px;
 }
 
 .dropit .dropit-open .dropit-submenu li a {
